[package]
name = "isin"
version = "0.1.8"
description = "Support for creating and validating ISINs"
authors = ["Gregor Purdy <gregor@abcelo.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["isin", "identifier", "finance", "equity", "stock"]
readme = "README.md"
repository = "https://github.com/gnp/isin-rs.git"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
bstr = { version = "0.2", features = ["std"] }

[[bench]]
name = "checksum_compare"
harness = false

[[bench]]
name = "parse"
harness = false
