[package]
name = "isin"
version = "0.1.17"
description = "Support for creating and validating ISINs"
authors = ["Gregor Purdy <gregor@abcelo.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["isin", "identifier", "finance", "equity", "stock"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/gnp/isin-rs.git"
include = []

[dev-dependencies]
proptest = "1.3.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0.107"

[dependencies]
serde = { version = "1.0.188", optional = true }

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "checksum_compare"
harness = false

[[bench]]
name = "parse"
harness = false

[[example]]
name = "serde"
required-features = ["serde"]
